...
@implementation DJInputCellTestController

- (void)viewDidLoad
{
    [super viewDidLoad];
    // Do any additional setup after loading the view.
    self.title = @"Input Test";
    
    [self.view addSubview:self.tableView];
    [self.view addConstraints:[NSLayoutConstraint constraintsWithVisualFormat:@"V:|[_tableView]|" options:0 metrics:nil views:NSDictionaryOfVariableBindings(_tableView)]];
    [self.view addConstraints:[NSLayoutConstraint constraintsWithVisualFormat:@"H:|[_tableView]|" options:0 metrics:nil views:NSDictionaryOfVariableBindings(_tableView)]];
    
    [self registCells];
...

- (DJTableViewVMTextFieldRow *)textFieldHeaderRow
{
    if (_textFieldHeaderRow == nil) {
        _textFieldHeaderRow = [DJTableViewVMTextFieldRow new];
        _textFieldHeaderRow.font = [UIFont systemFontOfSize:20];
        _textFieldHeaderRow.placeholder = @"Please input your name";
        _textFieldHeaderRow.charactersMaxCount = 8;
        [_textFieldHeaderRow setTextChanged:^(DJTableViewVMTextFieldRow * _Nonnull rowVM) {
            DJLog(@"input->message:%@",rowVM.text);
        }];
        [_textFieldHeaderRow setMaxCountInputMore:^(DJTableViewVMTextFieldRow * _Nonnull rowVM) {
            DJLog(@"more than 8");
...
