...

- (UIButton *)doneButton
{
    if (_doneButton == nil) {
        _doneButton = [UIButton new];
        _doneButton.translatesAutoresizingMaskIntoConstraints = NO;
        [_doneButton setTitle:@"Done" forState:UIControlStateNormal];
        [_doneButton setTitleColor:[UIColor blackColor] forState:UIControlStateNormal];
        [_doneButton addTarget:self action:@selector(onTouchButton:) forControlEvents:UIControlEventTouchUpInside];
    }
    return _doneButton;
}

...
